syntax = "proto3";
package Baseledger.baseledger.bridge;
import "gogoproto/gogo.proto";
import "bridge/orchestrator_validator_address.proto";
// this line is used by starport scaffolding # proto/tx/import

option go_package = "github.com/Baseledger/baseledger/x/bridge/types";

// Msg defines the Msg service.
service Msg {
      rpc UbtDepositedClaim(MsgUbtDepositedClaim) returns (MsgUbtDepositedClaimResponse);
  rpc ValidatorPowerChangedClaim(MsgValidatorPowerChangedClaim) returns (MsgValidatorPowerChangedClaimResponse);
  rpc CreateOrchestratorValidatorAddress(MsgCreateOrchestratorValidatorAddress) returns (MsgCreateOrchestratorValidatorAddressResponse);
  rpc UpdateOrchestratorValidatorAddress(MsgUpdateOrchestratorValidatorAddress) returns (MsgUpdateOrchestratorValidatorAddressResponse);
  rpc DeleteOrchestratorValidatorAddress(MsgDeleteOrchestratorValidatorAddress) returns (MsgDeleteOrchestratorValidatorAddressResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgUbtDepositedClaim {
  string creator = 1;
  uint64 eventNonce = 2;
  uint64 blockHeight = 3;
  string tokenContract = 4;
  string amount         = 5 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable)   = false
  ];
  string ethereumSender = 6;
  string cosmosReceiver = 7;
  string ubtPrice       = 8;
}

message MsgUbtDepositedClaimResponse {
}

message MsgValidatorPowerChangedClaim {
  string creator = 1;
  uint64 eventNonce = 2;
  uint64 blockHeight = 3;
  string tokenContract = 4;
  string amount         = 5 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable)   = false
  ];
  string ethereumSender = 6;
  string cosmosReceiver = 7;
}

message MsgValidatorPowerChangedClaimResponse {
}

message MsgCreateOrchestratorValidatorAddress {
  string validatorAddress = 1;
  string orchestratorAddress = 2;

}
message MsgCreateOrchestratorValidatorAddressResponse {}

message MsgUpdateOrchestratorValidatorAddress {
  string validatorAddress = 1;
  string orchestratorAddress = 2;

}
message MsgUpdateOrchestratorValidatorAddressResponse {}

message MsgDeleteOrchestratorValidatorAddress {
  string validatorAddress = 1;
  string orchestratorAddress = 2;
}
message MsgDeleteOrchestratorValidatorAddressResponse {}

// this line is used by starport scaffolding # proto/tx/message